Adds to exceptions for verbs

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <h3>Exceptions</h3>
                     <ul>
                         <li class="fragment">URLs have a maximum length (POST for spatial queries vs GET)</li>
-                        <li class="fragment">DELETE is often disabled at the server level</li>
+                        <li class="fragment">PUT and DELETE are often disabled at the server level (verb tampering)</li>
                     </ul>
                 </section>
                 <section>
