--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                     </section>
                     <section>
                         <h3>Deep Nesting</h3>
-                        <pre class="code"><code class="javascript code"
+                        <pre class="code"><code class="stretch javascript code"
                                                 data-code="./code-samples/conditional-body-before.js" data-trim
                                                 style="max-height:600px;"></code>
                             </code></pre>
                     </section>
                     <section>
                         <h3>Not so Deep</h3>
-                        <pre class="code"><code class="javascript code"
+                        <pre class="code"><code class="stretch javascript code"
                                                 data-code="./code-samples/conditional-body-after.js" data-trim
                                                 style="max-height:600px;"></code>
                             </code></pre>
@@ -113,7 +113,6 @@
                         <ul>
                             <li class="fragment"><a href="http://refactoring.com/">Refactoring</a> (Martin Fowler)</li>
                             <li class="fragment"><a href="http://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882">Clean Code</a> (Bob Martin)</a></li>
-                            <li class="fragment"></li>
                         </ul>
                     </section>
                 </section>
