--- a/index.html
+++ b/index.html
@@ -44,21 +44,34 @@
 				<section>
       	            <h2>GISi Dev Meet #3</h2>
                     <h3>8/17/15</h3>
-                    <h3>Side Effects and Composition</h3>
+                    <h3>Dependencies and Side Effects</h3>
 				</section>
                 <section>
-                    <h3>Big Picture -- Functional Programming and State</h3>
+                    <h3>Big Picture -- Scope</h3>
                     <ul>
-                        <li class="fragment">OO - We call methods on an object, which modify internal state</li>
-                        <li class="fragment">Functional - We call functions with inputs and outputs --state is stored on the stack</li>
+                        <li class="fragment">Dependencies - What does this code need from "outside?"</li>
+                        <li class="fragment">Side Effects - What changes does this code make that could affect other logic?</li>
                     </ul>
+                    <p class="fragment">We want to minimize both, and be explicit about them!</p>
+                </section>
+                <section>
+                    <h3>Within a Function</h3>
+
+                </section>
+                <section>
+                    <h3>Within a Class</h3>
+
+                </section>
+                <section>
+                    <h3>Within a module</h3>
+
                 </section>
                 <section>
                     <h3>Functional has some advantages</h3>
                     <ul>
                         <li class="fragment">Parallel processing (no shared state across processes)</li>
                         <li class="fragment">Testing (minimize scaffolding)</li>
-                        <li class="fragment"></li>
+                        <li class="fragment">Examples: Excel, SQL</li>
                     </ul>
                 </section>
                 <section>
