Adds function level

--- a/index.html
+++ b/index.html
@@ -55,8 +55,20 @@
                     <p class="fragment">We want to minimize both, and be explicit about them!</p>
                 </section>
                 <section>
-                    <h3>Within a Function</h3>
-
+                    <h3>At the Function level</h3>
+                    <pre class="code">
+                        <code class="javascript code"
+                              data-code="./code-samples/anon-before.js" data-trim
+                              style="max-height:600px;"></code>
+                    </pre>
+                </section>
+                <section>
+                    <h3>At the function level</h3>
+                    <pre class="code">
+                        <code class="javascript code"
+                              data-code="./code-samples/anon-after.js" data-trim
+                              style="max-height:600px;"></code>
+                    </pre>
                 </section>
                 <section>
                     <h3>Within a Class</h3>
