--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h3>At the Function level</h3>
                     <pre class="code">
                         <code class="javascript code"
-                              data-code="./code-samples/anon-before.js" data-trim
+                              data-code="./code-samples/function-before.js" data-trim
                               style="max-height:600px;"></code>
                     </pre>
                 </section>
@@ -66,17 +66,25 @@
                     <h3>At the function level</h3>
                     <pre class="code">
                         <code class="javascript code"
-                              data-code="./code-samples/anon-after.js" data-trim
+                              data-code="./code-samples/function-after.js" data-trim
                               style="max-height:600px;"></code>
                     </pre>
                 </section>
                 <section>
                     <h3>Within a Class</h3>
-
+                    <pre class="code">
+                        <code class="javascript code"
+							  data-code="./code-samples/class-before.js" data-trim
+							  style="max-height:600px;"></code>
+                    </pre>
                 </section>
                 <section>
-                    <h3>Within a module</h3>
-
+                    <h3>Within a class</h3>
+                    <pre class="code">
+                        <code class="javascript code"
+							  data-code="./code-samples/class-after.js" data-trim
+							  style="max-height:600px;"></code>
+                    </pre>
                 </section>
                 <section>
                     <h3>Functional has some advantages</h3>
