--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-      	            GISi
+					<h2>GISi Tech Exchange</h2>
+					<h3>4/22/2016</h3>
+					<h3>Simple Library for Automatic Publication (SLAP)</h3>
 				</section>
 				<section>
-      	            <a href="http://gisinc.com">Check out our website</a>
+      	            
 			    </section>
 		    </div>
 
