--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<body>
 
-		<div class="reveal">
+		<section class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<section class="slides">
@@ -47,7 +47,7 @@
 					<h3>SLAP - Simple Library for Automating Publication</h3>
 				</section>
 				<section>
-					<h3>Typical Workflow for Code</h3>
+					<h3>Typical <em>code</em> workflow</h3>
 					<ul>
 						<li class="fragment">Version Control - track changes</li>
 						<li class="fragment">Feature Branches - isolate changes</li>
@@ -56,7 +56,7 @@
 					</ul>
 				</section>
 				<section>
-					<h3>We would probably never...</h3>
+					<h3>We would probably <em>never...</em></h3>
 					<ul>
 						<li class="fragment">Make changes "live" on the server</li>
 						<li class="fragment">Not keep our code in version control</li>
@@ -64,13 +64,22 @@
 					</ul>
 					<p class="fragment">But this is our normal workflow for map services!</p>
 				</section>
-		    </div>
+				<section>
+					<h3>This is just a <em>tooling</em> problem!</h3>
+					<ul>
+						<li class="fragment">ESRI has exposed almost everything via REST API</li>
+						<li class="fragment">We just need some "high level" tools to use it</li>
+						<li class="fragment">SLAP!</li>
+					</ul>
+				</section>
+		    </section>
 
+		<div>
             <div class="top-bar"> &nbsp;	</div>
             <a class="logo" href="http://gisinc.com/" title="Geographic Information Services, Inc."> &nbsp; </a>
 
 		</div>
-
+		</section>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
