--- a/index.html
+++ b/index.html
@@ -42,21 +42,18 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<section class="slides">
 				<section>
-					<h2>GISi Tech Exchange</h2>
-					<h3>4/22/2016</h3>
-					<h3>SLAP - Simple Library for Automating Publication</h3>
+					<h2><strong>SLAP</strong> Maps</h2>
+					<h3>Simple Library for Automating Publication of Map Services</h3>
 				</section>
 				<section>
-					<h3>Typical <em>code</em> workflow</h3>
+					<h3>Map services</h3>
 					<ul>
-						<li class="fragment">Version Control - track changes</li>
-						<li class="fragment">Feature Branches - isolate changes</li>
-						<li class="fragment">Build Server - automatically test and deploy</li>
-						<li class="fragment">Promotion - Integration => UAT => Production</li>
+						<li class="fragment">Important part of client solutions...</li>
+						<li class="fragment">But we treat them like second class citizens!</li>
 					</ul>
 				</section>
 				<section>
-					<h3>We would probably <em>never...</em></h3>
+					<h3>We would probably <strong>never...</strong></h3>
 					<ul>
 						<li class="fragment">Make changes "live" on the server</li>
 						<li class="fragment">Not keep our code in version control</li>
@@ -65,11 +62,24 @@
 					<p class="fragment">But this is our normal workflow for map services!</p>
 				</section>
 				<section>
-					<h3>This is just a <em>tooling</em> problem!</h3>
+					<h3>What problems does SLAP solve?</h3>
 					<ul>
-						<li class="fragment">ESRI has exposed almost everything via REST API</li>
-						<li class="fragment">We just need some "high level" tools to use it</li>
-						<li class="fragment">SLAP!</li>
+						<li class="fragment">Continuous Integration of Map Services</li>
+						<li class="fragment">Managing services across different environments</li>
+					</ul>
+				</section>
+				<section>
+					<h3>It's open source!</h3>
+					<ul>
+						<li class="fragment"><a href="https://github.com/gisinc/slap">https://github.com/gisinc/slap</a></li>
+						<li class="fragment">Image Services, GP Services, Portal Items, etc.</li>
+						<li class="fragment">Add feature requests!</li>
+					</ul>
+				</section>
+				<section>
+					<h3>Thanks</h3>
+					<ul>
+						<li>Pat Scanlon, Kelley Lindish, Tim Troxler, Ryan Taylor</li>
 					</ul>
 				</section>
 		    </section>
