Adds more thankfulness

--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@
 				</section>
 				<section>
 					<h3>Thanks</h3>
-					<ul>
-						<li>Pat Scanlon, Kelley Lindish, Tim Troxler, Ryan Taylor</li>
-					</ul>
+						* Pat Scanlon
+						* Kelley Lindish
+						* Tim Troxler
+						* Ryan Taylor
+						* Colby Free
+						* Melinda Frost,
+						* Chad Cooper
+						* GES and NSGEM
 				</section>
 		    </section>
 
