--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
 					<h3>Simple Library for Automating Publication of Map Services</h3>
 				</section>
 				<section>
+					<h3>What is SLAP?</h3>
+					<ul>
+						<li class="fragment">A command line tool for publishing map services</li>
+						<li class="fragment">A set of Python modules</li>
+					</ul>
+				</section>
+				<section>
+					<h3>What problems does SLAP solve?</h3>
+					<ul>
+						<li class="fragment">Scale - tens or hundreds of services</li>
+						<li class="fragment">Continuous Integration</li>
+						<li class="fragment">Managing services across different environments</li>
+					</ul>
+				</section>
+				<section>
 					<h3>Map services</h3>
 					<ul>
 						<li class="fragment">Important part of client solutions...</li>
@@ -61,15 +76,22 @@
 					</ul>
 					<p class="fragment">But this is our normal workflow for map services!</p>
 				</section>
+                <section>
+                    <h3>How do I use it?</h3>
+                    <p>config.json</p>
+                        <pre class="code"><code class="stretch javascript code"
+                                                data-code="./code-samples/slap-config.txt" data-trim
+                                                style="max-height:100px;"></code>
+                            </code></pre>
+
+                    <p>command line</p>
+                        <pre class="code"><code class="stretch javascript code"
+                                                data-code="./code-samples/slap.txt" data-trim
+                                                style="max-height:100px;"></code>
+                            </code></pre>
+                </section>
 				<section>
-					<h3>What problems does SLAP solve?</h3>
-					<ul>
-						<li class="fragment">Continuous Integration of Map Services</li>
-						<li class="fragment">Managing services across different environments</li>
-					</ul>
-				</section>
-				<section>
-					<h3>It's open source!</h3>
+					<h3>SLAP is open source</h3>
 					<ul>
 						<li class="fragment"><a href="https://github.com/gisinc/slap">https://github.com/gisinc/slap</a></li>
 						<li class="fragment">Image Services, GP Services, Portal Items, etc.</li>
@@ -83,7 +105,7 @@
 						* Tim Troxler
 						* Ryan Taylor
 						* Colby Free
-						* Melinda Frost,
+						* Melinda Frost
 						* Chad Cooper
 						* GES and NSGEM
 				</section>
