Code samples and structure

--- a/index.html
+++ b/index.html
@@ -60,42 +60,26 @@
 						<li class="fragment">Managing services across different environments</li>
 					</ul>
 				</section>
-				<section>
-					<h3>Map services</h3>
-					<ul>
-						<li class="fragment">Important part of client solutions...</li>
-						<li class="fragment">But we treat them like second class citizens!</li>
-					</ul>
-				</section>
-				<section>
-					<h3>We would probably <strong>never...</strong></h3>
-					<ul>
-						<li class="fragment">Make changes "live" on the server</li>
-						<li class="fragment">Not keep our code in version control</li>
-						<li class="fragment">Use a manual process for deployment</li>
-					</ul>
-					<p class="fragment">But this is our normal workflow for map services!</p>
-				</section>
                 <section>
-                    <h3>How do I use it?</h3>
+                    <h3>Easy to use</h3>
                     <p>config.json</p>
                         <pre class="code"><code class="stretch javascript code"
                                                 data-code="./code-samples/slap-config.txt" data-trim
-                                                style="max-height:100px;"></code>
-                            </code></pre>
+                                                style="max-height:400px;"></code>
+                        </pre>
 
                     <p>command line</p>
                         <pre class="code"><code class="stretch javascript code"
                                                 data-code="./code-samples/slap.txt" data-trim
                                                 style="max-height:100px;"></code>
-                            </code></pre>
+                            </pre>
                 </section>
 				<section>
-					<h3>SLAP is open source</h3>
+					<h3>SLAP is on GitHub!</h3>
 					<ul>
 						<li class="fragment"><a href="https://github.com/gisinc/slap">https://github.com/gisinc/slap</a></li>
-						<li class="fragment">Image Services, GP Services, Portal Items, etc.</li>
-						<li class="fragment">Add feature requests!</li>
+						<li class="fragment">Future work:  Image Services, Geoprocessing, Portal Items</li>
+						<li class="fragment">Add feature requests, PRs, Star it, Try it!</li>
 					</ul>
 				</section>
 				<section>
@@ -108,6 +92,7 @@
 						* Melinda Frost
 						* Chad Cooper
 						* GES and NSGEM
+                        *
 				</section>
 		    </section>
 
