Remove content-specific stuff

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/gisinc2.css" id="theme">
+		<link rel="stylesheet" href="css/theme/gisinc.css" id="theme">
         <link rel="stylesheet" href="css/code-block.css">
 
 		<!-- Code syntax highlighting -->
@@ -41,59 +41,8 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<section class="slides">
-				<section>
-					<h2><strong>SLAP</strong> Maps</h2>
-					<h3>Simple Library for Automating Publication of Map Services</h3>
-				</section>
-				<section>
-					<h3>What is SLAP?</h3>
-					<ul>
-						<li class="fragment">A command line tool for publishing map services</li>
-						<li class="fragment">A set of Python modules</li>
-					</ul>
-				</section>
-				<section>
-					<h3>What problems does SLAP solve?</h3>
-					<ul>
-						<li class="fragment">Scale - tens or hundreds of services</li>
-						<li class="fragment">Continuous Integration</li>
-						<li class="fragment">Managing services across different environments</li>
-					</ul>
-				</section>
-                <section>
-                    <h3>Easy to use</h3>
-                    <p>config.json</p>
-                        <pre class="code"><code class="stretch javascript code"
-                                                data-code="./code-samples/slap-config.txt" data-trim
-                                                style="max-height:400px;"></code>
-                        </pre>
-
-                    <p>command line</p>
-                        <pre class="code"><code class="stretch javascript code"
-                                                data-code="./code-samples/slap.txt" data-trim
-                                                style="max-height:100px;"></code>
-                            </pre>
-                </section>
-				<section>
-					<h3>SLAP is on GitHub!</h3>
-					<ul>
-						<li class="fragment"><a href="https://github.com/gisinc/slap">https://github.com/gisinc/slap</a></li>
-						<li class="fragment">Future work:  Image Services, Geoprocessing, Portal Items</li>
-						<li class="fragment">Add feature requests, PRs, Star it, Try it!</li>
-					</ul>
-				</section>
-				<section>
-					<h3>Thanks</h3>
-						* Pat Scanlon
-						* Kelley Lindish
-						* Tim Troxler
-						* Ryan Taylor
-						* Colby Free
-						* Melinda Frost
-						* Chad Cooper
-						* GES and NSGEM
-                        *
-				</section>
+				<section>Slide 1</section>
+				<section>Slide 2</section>
 		    </section>
 
 		<div>
