--- a/index.html
+++ b/index.html
@@ -41,8 +41,60 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<section class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h2>GISi Dev Meet #10</h2>
+					<h3>6/13/2016</h3>
+					<h3>The Value Proposition of Architecture</h3>
+				</section>
+				<section>
+					<h3>What is architecture?</h3>
+					<ul>
+						<li class="fragment">Code structure and interaction</li>
+						<li class="fragment">Infrastructure</li>
+						<li class="fragment">Testing, Deployment</li>
+					</ul>
+				</section>
+				<section>
+					<h3>Good architecture lets us:</h3>
+					<ul>
+						<li class="fragment">Write fewer bugs</li>
+						<li class="fragment">Respond to changes (team, business, priority)</li>
+						<li class="fragment">Continue to add features <em>quickly</em> as the project grows</li>
+					</ul>
+					<p class="fragment">It's about time!</p>
+				</section>
+				<section>
+					<h3>Velocity</h3>
+					<img src="img/chart1.png"/>
+					<p class="fragment">* This is a hard metric to get at!</p>
+				</section>
+				<section>
+					<h3>Have you ever?</h3>
+					<ul>
+						<li class="fragment">Found a bug in production?</li>
+						<li class="fragment">Seen your estimates for new features go up as a project grew?</li>
+						<li class="fragment">Come on board an existing project where no one knows how it works?</li>
+					</ul>
+				</section>
+				<section>
+					<h3>The Takeaway?</h3>
+					<ul>
+						<li class="fragment">Design and testing aren't what slows down a project</li>
+						<li class="fragment">Software projects never die!</li>
+					</ul>
+				</section>
+				<section>
+					<h3>Why do we talk about this stuff?</h3>
+					<blockquote>
+						<p>"The making of good software takes time. If you try to make it take less time, it will take more time."</p>
+						<cite>Douglas Crockford</cite>
+					</blockquote>
+
+					<blockquote>
+						<p>"The only way to go fast is to go well."</p>
+						<footer><cite>Robert Martin</cite></footer>
+					</blockquote>
+				</section>
 		    </section>
 
 		<div>
